--- a/frontend/src/assets/locales/it-IT/translation.json
+++ b/frontend/src/assets/locales/it-IT/translation.json
@@ -54,7 +54,7 @@
   "settings.authorization.deleting.ok": "L'autorizzazione di ONLYOFFICE DocSpace è stata eliminata con successo",
   "settings.authorization.saving.ok": "L'autorizzazione di ONLYOFFICE DocSpace è stata salvata con successo",
   "settings.authorization.saving.error": "Impossibile salvare l'autorizzazione di ONLYOFFICE DocSpace",
-  "settings.authorization.title": "Accedi all'account ONLYOFFICE DocSpace",
+  "settings.authorization.title": "",
   "settings.authorization.subtitle.address": "Il tuo indirizzo DocSpace connesso è",
   "settings.authorization.status.authorized": "Hai effettuato l'accesso al tuo account ONLYOFFICE DocSpace con successo",
   "settings.authorization.inputs.email": "Email",
