--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -54,7 +54,7 @@
   "settings.authorization.deleting.ok": "ONLYOFFICE DocSpace認証が正常に削除されました",
   "settings.authorization.saving.ok": "ONLYOFFICE DocSpace認証が正常に保存されました",
   "settings.authorization.saving.error": "ONLYOFFICE DocSpace認証を保存できませんでした",
-  "settings.authorization.title": "ONLYOFFICE DocSpaceアカウントにログイン",
+  "settings.authorization.title": "",
   "settings.authorization.subtitle.address": "接続されたDocSpaceアドレス：",
   "settings.authorization.status.authorized": "ONLYOFFICE DocSpaceアカウントに正常にログインしました",
   "settings.authorization.inputs.email": "Email",
