--- a/frontend/src/assets/locales/pt-BR/translation.json
+++ b/frontend/src/assets/locales/pt-BR/translation.json
@@ -54,7 +54,7 @@
   "settings.authorization.deleting.ok": "A autorização do ONLYOFFICE DocSpace foi excluída com sucesso",
   "settings.authorization.saving.ok": "A autorização do ONLYOFFICE DocSpace foi salva com sucesso",
   "settings.authorization.saving.error": "Não foi possível salvar a autorização do ONLYOFFICE DocSpace",
-  "settings.authorization.title": "Faça login na conta do ONLYOFFICE DocSpace",
+  "settings.authorization.title": "",
   "settings.authorization.subtitle.address": "Seu endereço do DocSpace conectado é",
   "settings.authorization.status.authorized": "Você fez login com sucesso na sua conta do ONLYOFFICE DocSpace",
   "settings.authorization.inputs.email": "E-mail",
