--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -54,7 +54,7 @@
   "settings.authorization.deleting.ok": "Авторизация ONLYOFFICE DocSpace успешно удалена",
   "settings.authorization.saving.ok": "Авторизация ONLYOFFICE DocSpace успешно сохранена",
   "settings.authorization.saving.error": "Не удалось сохранить авторизацию ONLYOFFICE DocSpace",
-  "settings.authorization.title": "Войти в учетную запись ONLYOFFICE DocSpace",
+  "settings.authorization.title": "",
   "settings.authorization.subtitle.address": "Ваш подключенный адрес DocSpace:",
   "settings.authorization.status.authorized": "Вы успешно вошли в свою учетную запись ONLYOFFICE DocSpace",
   "settings.authorization.inputs.email": "Электронная почта",
