--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -54,7 +54,7 @@
   "settings.authorization.deleting.ok": "ONLYOFFICE DocSpace authorization has been successfully deleted",
   "settings.authorization.saving.ok": "ONLYOFFICE DocSpace authorization has been successfully saved",
   "settings.authorization.saving.error": "Could not save ONLYOFFICE DocSpace authorization",
-  "settings.authorization.title": "Login to ONLYOFFICE DocSpace account",
+  "settings.authorization.title": "Log into your connected ONLYOFFICE DocSpace to start using it within Pipedrive",
   "settings.authorization.subtitle.address": "Your connected DocSpace address is",
   "settings.authorization.status.authorized": "You have successfully logged in to your ONLYOFFICE DocSpace account",
   "settings.authorization.inputs.email": "Email",
