--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -53,6 +53,7 @@
   "room.request-access.error": "ONLYOFFICE DocSpaceルームへのアクセスエラー",
   "settings.authorization.deleting.ok": "ONLYOFFICE DocSpace認証が正常に削除されました",
   "settings.authorization.saving.ok": "ONLYOFFICE DocSpace認証が正常に保存されました",
+  "settings.authorization.unsuccessful": "",
   "settings.authorization.saving.error": "ONLYOFFICE DocSpace認証を保存できませんでした",
   "settings.authorization.title": "",
   "settings.authorization.subtitle.address": "接続されたDocSpaceアドレス：",
