--- a/frontend/src/assets/locales/fr-FR/translation.json
+++ b/frontend/src/assets/locales/fr-FR/translation.json
@@ -53,6 +53,7 @@
   "room.request-access.error": "Erreur d'accès à la salle d'ONLYOFFICE DocSpace",
   "settings.authorization.deleting.ok": "L'autorisation d'ONLYOFFICE DocSpace a été supprimée avec succès",
   "settings.authorization.saving.ok": "L'autorisation d'ONLYOFFICE DocSpace a été sauvegardée avec succès",
+  "settings.authorization.unsuccessful": "",
   "settings.authorization.saving.error": "Impossible de sauvegarder l'autorisation d'ONLYOFFICE DocSpace",
   "settings.authorization.title": "",
   "settings.authorization.subtitle.address": "Votre adresse DocSpace connectée est",
