feat: added user guide

--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -17,6 +17,7 @@
   "background.error.hint.admin.docspace-connection": "Bitte gehen Sie zu den Verbindungseinstellungen, um die Einstellungen der ONLYOFFICE DocSpace App zu konfigurieren.",
   "background.error.hint.docspace-connection": "Bitte wenden Sie sich an den Administrator.",
   "background.error.hint.webhook.is-not-installed": "Die Synchronisierung zwischen Deal-Followern und Raummitgliedern findet aufgrund einer Webhook-Fehlfunktion nicht statt.",
+  "button.back": "",
   "button.reauthorize": "Erneut autorisieren",
   "button.settings": "Einstellungen öffnen",
   "button.create.room": "Raum erstellen",
@@ -28,7 +29,10 @@
   "button.cancel": "Abbrechen",
   "button.create-api-key": "",
   "button.forgot-password": "",
+  "button.finish": "",
+  "button.next": "",
   "button.save": "Speichern",
+  "button.skip": "",
   "button.reinstall": "App neu installieren",
   "button.request-access": "Zugang beantragen",
   "docspace.error.unreached": "ONLYOFFICE DocSpace ist nicht erreichbar.",
@@ -79,5 +83,17 @@
   "settings.connection.inputs.url.description": "",
   "settings.connection.inputs.api-key.title": "ONLYOFFICE DocSpace API-Schlüssel",
   "settings.connection.inputs.api-key.tooltip": "",
-  "settings.connection.menu-item": "Verbindung"
+  "settings.connection.menu-item": "Verbindung",
+  "user-guide.page.1.title": "",
+  "user-guide.page.1.step.1": "",
+  "user-guide.page.1.step.2": "",
+  "user-guide.page.1.step.3": "",
+  "user-guide.page.2.title": "",
+  "user-guide.page.2.step.1": "",
+  "user-guide.page.2.step.2": "",
+  "user-guide.page.3.title": "",
+  "user-guide.page.3.step.1": "",
+  "user-guide.page.3.step.2": "",
+  "user-guide.page.3.step.3": "",
+  "user-guide.page.3.step.4": ""
 }
