--- a/frontend/src/assets/locales/es-ES/translation.json
+++ b/frontend/src/assets/locales/es-ES/translation.json
@@ -17,6 +17,7 @@
   "background.error.hint.admin.docspace-connection": "Por favor, acceda a la Configuración de conexión para configurar los ajustes de la aplicación ONLYOFFICE DocSpace.",
   "background.error.hint.docspace-connection": "Por favor, póngase en contacto con el administrador.",
   "background.error.hint.webhook.is-not-installed": "",
+  "button.back": "",
   "button.reauthorize": "Volver a autorizar",
   "button.settings": "",
   "button.create.room": "Crear sala",
@@ -28,7 +29,10 @@
   "button.cancel": "Cancelar",
   "button.create-api-key": "",
   "button.forgot-password": "",
+  "button.finish": "",
+  "button.next": "",
   "button.save": "Guardar",
+  "button.skip": "",
   "button.request-access": "Solicitar acceso",
   "button.reinstall": "",
   "docspace.error.unreached": "ONLYOFFICE DocSpace no está disponible.",
@@ -79,5 +83,17 @@
   "settings.connection.inputs.url.description": "",
   "settings.connection.inputs.api-key.title": "",
   "settings.connection.inputs.api-key.tooltip": "",
-  "settings.connection.menu-item": "Conexión"
+  "settings.connection.menu-item": "Conexión",
+  "user-guide.page.1.title": "",
+  "user-guide.page.1.step.1": "",
+  "user-guide.page.1.step.2": "",
+  "user-guide.page.1.step.3": "",
+  "user-guide.page.2.title": "",
+  "user-guide.page.2.step.1": "",
+  "user-guide.page.2.step.2": "",
+  "user-guide.page.3.title": "",
+  "user-guide.page.3.step.1": "",
+  "user-guide.page.3.step.2": "",
+  "user-guide.page.3.step.3": "",
+  "user-guide.page.3.step.4": ""
 }
