--- a/frontend/src/assets/locales/fr-FR/translation.json
+++ b/frontend/src/assets/locales/fr-FR/translation.json
@@ -17,6 +17,7 @@
   "background.error.hint.admin.docspace-connection": "Veuillez consulter les paramètres de connexion pour configurer les paramètres de l'application ONLYOFFICE DocSpace.",
   "background.error.hint.docspace-connection": "Veuillez contacter l'administrateur.",
   "background.error.hint.webhook.is-not-installed": "La synchronisation entre les suiveurs de Deal et les membres de salle ne s'effectue pas en raison d'un dysfonctionnement du webhook.",
+  "button.back": "",
   "button.reauthorize": "Re-autoriser",
   "button.settings": "Accéder aux paramètres",
   "button.create.room": "Créer une salle",
@@ -28,7 +29,10 @@
   "button.cancel": "Annuler",
   "button.create-api-key": "",
   "button.forgot-password": "",
+  "button.finish": "",
+  "button.next": "",
   "button.save": "Enregistrer",
+  "button.skip": "",
   "button.request-access": "Demander l'accès",
   "button.reinstall": "Réinstaller l'application",
   "docspace.error.unreached": "ONLYOFFICE DocSpace n'est pas accessible.",
@@ -79,5 +83,17 @@
   "settings.connection.inputs.url.description": "",
   "settings.connection.inputs.api-key.title": "Clé de l'API de ONLYOFFICE DocSpace",
   "settings.connection.inputs.api-key.tooltip": "",
-  "settings.connection.menu-item": "Connexion"
+  "settings.connection.menu-item": "Connexion",
+  "user-guide.page.1.title": "",
+  "user-guide.page.1.step.1": "",
+  "user-guide.page.1.step.2": "",
+  "user-guide.page.1.step.3": "",
+  "user-guide.page.2.title": "",
+  "user-guide.page.2.step.1": "",
+  "user-guide.page.2.step.2": "",
+  "user-guide.page.3.title": "",
+  "user-guide.page.3.step.1": "",
+  "user-guide.page.3.step.2": "",
+  "user-guide.page.3.step.3": "",
+  "user-guide.page.3.step.4": ""
 }
