--- a/frontend/src/assets/locales/it-IT/translation.json
+++ b/frontend/src/assets/locales/it-IT/translation.json
@@ -17,6 +17,7 @@
   "background.error.hint.admin.docspace-connection": "Accedi alle Impostazioni di connessione per configurare le impostazioni dell'app ONLYOFFICE DocSpace.",
   "background.error.hint.docspace-connection": "Contatta l'amministratore.",
   "background.error.hint.webhook.is-not-installed": "La sincronizzazione tra i follower del Deal e i membri della Room non avviene a causa di un malfunzionamento del webhook.",
+  "button.back": "",
   "button.reauthorize": "Riautorizza",
   "button.settings": "Vai a Impostazioni",
   "button.create.room": "Crea stanza",
@@ -28,7 +29,10 @@
   "button.cancel": "Annulla",
   "button.create-api-key": "",
   "button.forgot-password": "",
+  "button.finish": "",
+  "button.next": "",
   "button.save": "Salva",
+  "button.skip": "",
   "button.request-access": "Richiedi l'accesso",
   "button.reinstall": "Reinstalla l'app",
   "docspace.error.unreached": "Impossibile raggiungere ONLYOFFICE DocSpace.",
@@ -79,5 +83,17 @@
   "settings.connection.inputs.url.description": "",
   "settings.connection.inputs.api-key.title": "Chiave API ONLYOFFICE DocSpace",
   "settings.connection.inputs.api-key.tooltip": "",
-  "settings.connection.menu-item": "Connessione"
+  "settings.connection.menu-item": "Connessione",
+  "user-guide.page.1.title": "",
+  "user-guide.page.1.step.1": "",
+  "user-guide.page.1.step.2": "",
+  "user-guide.page.1.step.3": "",
+  "user-guide.page.2.title": "",
+  "user-guide.page.2.step.1": "",
+  "user-guide.page.2.step.2": "",
+  "user-guide.page.3.title": "",
+  "user-guide.page.3.step.1": "",
+  "user-guide.page.3.step.2": "",
+  "user-guide.page.3.step.3": "",
+  "user-guide.page.3.step.4": ""
 }
