--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -17,6 +17,7 @@
   "background.error.hint.admin.docspace-connection": "ONLYOFFICE DocSpace アプリの設定を行うには、接続設定に移動してください。",
   "background.error.hint.docspace-connection": "管理者にお問い合わせください。",
   "background.error.hint.webhook.is-not-installed": "Webhookの誤動作により、取引フォロワーとルームメンバー間の同期が行われていません。",
+  "button.back": "",
   "button.reauthorize": "再認証",
   "button.settings": "設定に移動",
   "button.create.room": "ルームの作成",
@@ -28,7 +29,10 @@
   "button.cancel": "キャンセル",
   "button.create-api-key": "",
   "button.forgot-password": "",
+  "button.finish": "",
+  "button.next": "",
   "button.save": "保存",
+  "button.skip": "",
   "button.request-access": "アクセスをリクエストする",
   "button.reinstall": "アプリを再インストール",
   "docspace.error.unreached": "ONLYOFFICE DocSpaceに接続できません",
@@ -79,5 +83,17 @@
   "settings.connection.inputs.url.description": "",
   "settings.connection.inputs.api-key.title": "ONLYOFFICE DocSpaceのAPIキー",
   "settings.connection.inputs.api-key.tooltip": "",
-  "settings.connection.menu-item": "接続"
+  "settings.connection.menu-item": "接続",
+  "user-guide.page.1.title": "",
+  "user-guide.page.1.step.1": "",
+  "user-guide.page.1.step.2": "",
+  "user-guide.page.1.step.3": "",
+  "user-guide.page.2.title": "",
+  "user-guide.page.2.step.1": "",
+  "user-guide.page.2.step.2": "",
+  "user-guide.page.3.title": "",
+  "user-guide.page.3.step.1": "",
+  "user-guide.page.3.step.2": "",
+  "user-guide.page.3.step.3": "",
+  "user-guide.page.3.step.4": ""
 }
