--- a/frontend/src/assets/locales/pt-BR/translation.json
+++ b/frontend/src/assets/locales/pt-BR/translation.json
@@ -17,6 +17,7 @@
   "background.error.hint.admin.docspace-connection": "Por favor, vá para a Configuração de conexão para configurar as configurações do aplicativo ONLYOFFICE DocSpace.",
   "background.error.hint.docspace-connection": "Entre em contato com o administrador.",
   "background.error.hint.webhook.is-not-installed": "A sincronização entre os seguidores do Deal e os membros da Sala não está ocorrendo devido a um mau funcionamento do webhook.",
+  "button.back": "",
   "button.reauthorize": "Reautorizar",
   "button.settings": "Acesse Configurações",
   "button.create.room": "Criar sala",
@@ -29,7 +30,10 @@
   "button.create-api-key": "",
   "button.forgot-password": "",
   "button.save": "Salvar",
+  "button.finish": "",
+  "button.next": "",
   "button.request-access": "Solicitar acesso",
+  "button.skip": "",
   "button.reinstall": "Reinstale o aplicativo",
   "docspace.error.unreached": "ONLYOFFICE DocSpace não pode ser acessado.",
   "docspace.error.login": "Falha na autenticação do usuário",
@@ -79,5 +83,17 @@
   "settings.connection.inputs.url.description": "",
   "settings.connection.inputs.api-key.title": "Chave de API do ONLYOFFICE DocSpace.",
   "settings.connection.inputs.api-key.tooltip": "",
-  "settings.connection.menu-item": "Conexão"
+  "settings.connection.menu-item": "Conexão",
+  "user-guide.page.1.title": "",
+  "user-guide.page.1.step.1": "",
+  "user-guide.page.1.step.2": "",
+  "user-guide.page.1.step.3": "",
+  "user-guide.page.2.title": "",
+  "user-guide.page.2.step.1": "",
+  "user-guide.page.2.step.2": "",
+  "user-guide.page.3.title": "",
+  "user-guide.page.3.step.1": "",
+  "user-guide.page.3.step.2": "",
+  "user-guide.page.3.step.3": "",
+  "user-guide.page.3.step.4": ""
 }
