--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -17,6 +17,7 @@
   "background.error.hint.admin.docspace-connection": "Пожалуйста, перейдите к Настройкам соединения, чтобы настроить приложение.",
   "background.error.hint.docspace-connection": "Пожалуйста, обратитесь к администратору",
   "background.error.hint.webhook.is-not-installed": "Синхронизация между подписчиками сделки и участниками комнаты не происходит из-за сбоя в работе веб-хука.",
+  "button.back": "",
   "button.reauthorize": "Авторизуйтесь повторно",
   "button.settings": "Перейти в настройки",
   "button.create.room": "Создать комнату",
@@ -28,8 +29,11 @@
   "button.cancel": "Отменить",
   "button.create-api-key": "",
   "button.forgot-password": "",
+  "button.finish": "",
+  "button.next": "",
   "button.save": "Сохранить",
   "button.request-access": "Запросить доступ",
+  "button.skip": "",
   "button.reinstall": "Переустановить приложение",
   "docspace.error.unreached": "ONLYOFFICE DocSpace недоступен.",
   "docspace.error.login": "Не удалось идентифицировать пользователя",
@@ -79,5 +83,17 @@
   "settings.connection.inputs.url.description": "",
   "settings.connection.inputs.api-key.title": "ONLYOFFICE DocSpace API Ключ",
   "settings.connection.inputs.api-key.tooltip": "",
-  "settings.connection.menu-item": "Соединение"
+  "settings.connection.menu-item": "Соединение",
+  "user-guide.page.1.title": "",
+  "user-guide.page.1.step.1": "",
+  "user-guide.page.1.step.2": "",
+  "user-guide.page.1.step.3": "",
+  "user-guide.page.2.title": "",
+  "user-guide.page.2.step.1": "",
+  "user-guide.page.2.step.2": "",
+  "user-guide.page.3.title": "",
+  "user-guide.page.3.step.1": "",
+  "user-guide.page.3.step.2": "",
+  "user-guide.page.3.step.3": "",
+  "user-guide.page.3.step.4": ""
 }
