--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -17,6 +17,7 @@
   "background.error.hint.admin.docspace-connection": "Please go to the Connection Setting to configure ONLYOFFICE DocSpace app settings.",
   "background.error.hint.docspace-connection": "Please contact the administrator.",
   "background.error.hint.webhook.is-not-installed": "The synchronization between Deal followers and Room members is not occurring due to a webhook malfunction.",
+  "button.back": "Back",
   "button.reauthorize": "Re-authorize",
   "button.settings": "Go to Settings",
   "button.create.room": "Create room",
@@ -28,7 +29,10 @@
   "button.cancel": "Cancel",
   "button.create-api-key": "Create a key",
   "button.forgot-password": "Forgot password?",
+  "button.finish": "Finish",
+  "button.next": "Next",
   "button.save": "Save",
+  "button.skip": "Skip",
   "button.request-access": "Request access",
   "button.reinstall": "Reinstall app",
   "docspace.error.unreached": "ONLYOFFICE DocSpace cannot be reached.",
@@ -79,5 +83,17 @@
   "settings.connection.inputs.url.description": "Enter the URL of your DocSpace in the field above. For example, https://yourcompany.onlyoffice.com",
   "settings.connection.inputs.api-key.title": "ONLYOFFICE DocSpace API Key",
   "settings.connection.inputs.api-key.tooltip": "Before connecting the app, please go to your DocSpace, create a new API key and enter it here. You can choose Permissions (All) or set restricted access with these required scopes for proper app functionality: Profile (Read), Contacts (Write), and Rooms (Write).",
-  "settings.connection.menu-item": "Connection"
+  "settings.connection.menu-item": "Connection",
+  "user-guide.page.1.title": "Create rooms",
+  "user-guide.page.1.step.1": "Start by creating a DocSpace room directly from a deal card in Pipedrive.",
+  "user-guide.page.1.step.2": "Each room is automatically named after the deal, for example: Deal - [deal name]",
+  "user-guide.page.1.step.3": "This keeps your documents organized and directly tied to the deal.",
+  "user-guide.page.2.title": "Synchronize access permissions",
+  "user-guide.page.2.step.1": "Set permissions for each room participant. You can grant or restrict access for team members, clients, or external collaborators.",
+  "user-guide.page.2.step.2": "This ensures secure document sharing and role-based collaboration.",
+  "user-guide.page.3.title": "Create or upload documents",
+  "user-guide.page.3.step.1": "Once the room is set up, you can:",
+  "user-guide.page.3.step.2": "Upload existing files: DOCX, XLSX, PPTX, PDF, etc.",
+  "user-guide.page.3.step.3": "Create new files directly in the room: text documents, spreadsheets, or presentations.",
+  "user-guide.page.3.step.4": "Everything is saved and connected to the relevant deal."
 }
