feat: added welcome screen on authorization page

--- a/frontend/src/assets/locales/fr-FR/translation.json
+++ b/frontend/src/assets/locales/fr-FR/translation.json
@@ -18,6 +18,7 @@
   "background.error.hint.docspace-connection": "Veuillez contacter l'administrateur.",
   "background.error.hint.webhook.is-not-installed": "La synchronisation entre les suiveurs de Deal et les membres de salle ne s'effectue pas en raison d'un dysfonctionnement du webhook.",
   "button.back": "",
+  "button.deals": "",
   "button.reauthorize": "Re-autoriser",
   "button.settings": "Accéder aux paramètres",
   "button.create.room": "Créer une salle",
@@ -65,6 +66,10 @@
   "settings.authorization.inputs.email": "E-mail",
   "settings.authorization.inputs.password": "Mot de passe",
   "settings.authorization.menu-item": "Authorization",
+  "settings.authorization.welcome.title": "",
+  "settings.authorization.welcome.option1": "",
+  "settings.authorization.welcome.option2": "",
+  "settings.authorization.welcome.open-guide": "",
   "settings.connection.saving.error.undefined": "Impossible d'enregistrer les paramètres d'ONLYOFFICE DocSpace",
   "settings.connection.saving.error.common-invalid-api-key": "",
   "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "ONLYOFFICE DocSpace n'est pas joignable",
