--- a/frontend/src/assets/locales/it-IT/translation.json
+++ b/frontend/src/assets/locales/it-IT/translation.json
@@ -18,6 +18,7 @@
   "background.error.hint.docspace-connection": "Contatta l'amministratore.",
   "background.error.hint.webhook.is-not-installed": "La sincronizzazione tra i follower del Deal e i membri della Room non avviene a causa di un malfunzionamento del webhook.",
   "button.back": "",
+  "button.deals": "",
   "button.reauthorize": "Riautorizza",
   "button.settings": "Vai a Impostazioni",
   "button.create.room": "Crea stanza",
@@ -65,6 +66,10 @@
   "settings.authorization.inputs.email": "Email",
   "settings.authorization.inputs.password": "Password",
   "settings.authorization.menu-item": "Autorizzazione",
+  "settings.authorization.welcome.title": "",
+  "settings.authorization.welcome.option1": "",
+  "settings.authorization.welcome.option2": "",
+  "settings.authorization.welcome.open-guide": "",
   "settings.connection.saving.error.undefined": "Impossibile salvare le impostazioni di ONLYOFFICE DocSpace",
   "settings.connection.saving.error.common-invalid-api-key": "",
   "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "Impossibile raggiungere ONLYOFFICE DocSpace",
