--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -18,6 +18,7 @@
   "background.error.hint.docspace-connection": "管理者にお問い合わせください。",
   "background.error.hint.webhook.is-not-installed": "Webhookの誤動作により、取引フォロワーとルームメンバー間の同期が行われていません。",
   "button.back": "",
+  "button.deals": "",
   "button.reauthorize": "再認証",
   "button.settings": "設定に移動",
   "button.create.room": "ルームの作成",
@@ -65,6 +66,10 @@
   "settings.authorization.inputs.email": "Email",
   "settings.authorization.inputs.password": "パスワード",
   "settings.authorization.menu-item": "認証",
+  "settings.authorization.welcome.title": "",
+  "settings.authorization.welcome.option1": "",
+  "settings.authorization.welcome.option2": "",
+  "settings.authorization.welcome.open-guide": "",
   "settings.connection.saving.error.undefined": "ONLYOFFICE DocSpace設定を保存できませんでした",
   "settings.connection.saving.error.common-invalid-api-key": "",
   "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "ONLYOFFICE DocSpaceに接続できません",
