--- a/frontend/src/assets/locales/pt-BR/translation.json
+++ b/frontend/src/assets/locales/pt-BR/translation.json
@@ -18,6 +18,7 @@
   "background.error.hint.docspace-connection": "Entre em contato com o administrador.",
   "background.error.hint.webhook.is-not-installed": "A sincronização entre os seguidores do Deal e os membros da Sala não está ocorrendo devido a um mau funcionamento do webhook.",
   "button.back": "",
+  "button.deals": "",
   "button.reauthorize": "Reautorizar",
   "button.settings": "Acesse Configurações",
   "button.create.room": "Criar sala",
@@ -65,6 +66,10 @@
   "settings.authorization.inputs.email": "E-mail",
   "settings.authorization.inputs.password": "Senha",
   "settings.authorization.menu-item": "Autorização",
+  "settings.authorization.welcome.title": "",
+  "settings.authorization.welcome.option1": "",
+  "settings.authorization.welcome.option2": "",
+  "settings.authorization.welcome.open-guide": "",
   "settings.connection.saving.error.undefined": "Não foi possível salvar as configurações do ONLYOFFICE DocSpace",
   "settings.connection.saving.error.common-invalid-api-key": "",
   "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "ONLYOFFICE DocSpace não pode ser contatado",
