--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -18,6 +18,7 @@
   "background.error.hint.docspace-connection": "Bitte wenden Sie sich an den Administrator.",
   "background.error.hint.webhook.is-not-installed": "Die Synchronisierung zwischen Deal-Followern und Raummitgliedern findet aufgrund einer Webhook-Fehlfunktion nicht statt.",
   "button.back": "",
+  "button.deals": "",
   "button.reauthorize": "Erneut autorisieren",
   "button.settings": "Einstellungen öffnen",
   "button.create.room": "Raum erstellen",
@@ -65,6 +66,10 @@
   "settings.authorization.inputs.email": "E-Mail",
   "settings.authorization.inputs.password": "Passwort",
   "settings.authorization.menu-item": "Autorisierung",
+  "settings.authorization.welcome.title": "",
+  "settings.authorization.welcome.option1": "",
+  "settings.authorization.welcome.option2": "",
+  "settings.authorization.welcome.open-guide": "",
   "settings.connection.saving.error.undefined": "ONLYOFFICE DocSpace-Einstellungen konnten nicht gespeichert werden",
   "settings.connection.saving.error.common-invalid-api-key": "",
   "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "ONLYOFFICE DocSpace ist nicht erreichbar",
