--- a/frontend/src/assets/locales/en-US/translation.json
+++ b/frontend/src/assets/locales/en-US/translation.json
@@ -18,6 +18,7 @@
   "background.error.hint.docspace-connection": "Please contact the administrator.",
   "background.error.hint.webhook.is-not-installed": "The synchronization between Deal followers and Room members is not occurring due to a webhook malfunction.",
   "button.back": "Back",
+  "button.deals": "Go to Deals",
   "button.reauthorize": "Re-authorize",
   "button.settings": "Go to Settings",
   "button.create.room": "Create room",
@@ -65,6 +66,10 @@
   "settings.authorization.inputs.email": "Email",
   "settings.authorization.inputs.password": "Password",
   "settings.authorization.menu-item": "Authorization",
+  "settings.authorization.welcome.title": "Welcome to DocSpace!",
+  "settings.authorization.welcome.option1": "Create a room in the deal",
+  "settings.authorization.welcome.option2": "Upload a document to the room",
+  "settings.authorization.welcome.open-guide": "Open Guide",
   "settings.connection.saving.error.undefined": "Could not save ONLYOFFICE DocSpace settings",
   "settings.connection.saving.error.common-invalid-api-key": "Invalid DocSpace API key, please try again",
   "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "ONLYOFFICE DocSpace cannot be reached",
