--- a/frontend/src/assets/locales/es-ES/translation.json
+++ b/frontend/src/assets/locales/es-ES/translation.json
@@ -18,6 +18,7 @@
   "background.error.hint.docspace-connection": "Por favor, póngase en contacto con el administrador.",
   "background.error.hint.webhook.is-not-installed": "",
   "button.back": "",
+  "button.deals": "",
   "button.reauthorize": "Volver a autorizar",
   "button.settings": "",
   "button.create.room": "Crear sala",
@@ -65,6 +66,10 @@
   "settings.authorization.inputs.email": "Correo electrónico",
   "settings.authorization.inputs.password": "Contraseña",
   "settings.authorization.menu-item": "Autorización",
+  "settings.authorization.welcome.title": "",
+  "settings.authorization.welcome.option1": "",
+  "settings.authorization.welcome.option2": "",
+  "settings.authorization.welcome.open-guide": "",
   "settings.connection.saving.error.undefined": "No se ha podido guardar los ajustes de ONLYOFFICE DocSpace",
   "settings.connection.saving.error.common-invalid-api-key": "",
   "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "",
