--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -18,6 +18,7 @@
   "background.error.hint.docspace-connection": "Пожалуйста, обратитесь к администратору",
   "background.error.hint.webhook.is-not-installed": "Синхронизация между подписчиками сделки и участниками комнаты не происходит из-за сбоя в работе веб-хука.",
   "button.back": "",
+  "button.deals": "",
   "button.reauthorize": "Авторизуйтесь повторно",
   "button.settings": "Перейти в настройки",
   "button.create.room": "Создать комнату",
@@ -65,6 +66,10 @@
   "settings.authorization.inputs.email": "Электронная почта",
   "settings.authorization.inputs.password": "Пароль",
   "settings.authorization.menu-item": "Авторизация",
+  "settings.authorization.welcome.title": "",
+  "settings.authorization.welcome.option1": "",
+  "settings.authorization.welcome.option2": "",
+  "settings.authorization.welcome.open-guide": "",
   "settings.connection.saving.error.undefined": "Не удалось сохранить настройки ONLYOFFICE DocSpace",
   "settings.connection.saving.error.common-invalid-api-key": "",
   "settings.connection.saving.error.DOCSPACE_CAN_NOT_BE_REACHED": "ONLYOFFICE DocSpace недоступен",
