--- a/frontend/src/assets/locales/ja-JP/translation.json
+++ b/frontend/src/assets/locales/ja-JP/translation.json
@@ -57,6 +57,7 @@
   "room.request-access.ok": "ONLYOFFICE DocSpaceルームへのアクセスが許可されました。",
   "room.request-access.error": "ONLYOFFICE DocSpaceルームへのアクセスエラー",
   "settings.authorization.deleting.ok": "ONLYOFFICE DocSpace認証が正常に削除されました",
+  "settings.authorization.deleting.confirm-message": "",
   "settings.authorization.saving.ok": "ONLYOFFICE DocSpace認証が正常に保存されました",
   "settings.authorization.unsuccessful": "",
   "settings.authorization.saving.error": "ONLYOFFICE DocSpace認証を保存できませんでした",
