--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -57,6 +57,7 @@
   "room.request-access.ok": "Sie haben erfolgreich Zugang zum ONLYOFFICE DocSpace-Raum erhalten",
   "room.request-access.error": "Fehler beim Erhalten des Zugangs zum ONLYOFFICE DocSpace-Raum",
   "settings.authorization.deleting.ok": "ONLYOFFICE DocSpace-Autorisierung wurde erfolgreich gelöscht",
+  "settings.authorization.deleting.confirm-message": "",
   "settings.authorization.saving.ok": "ONLYOFFICE DocSpace-Autorisierung wurde erfolgreich gespeichert",
   "settings.authorization.unsuccessful": "",
   "settings.authorization.saving.error": "ONLYOFFICE DocSpace-Autorisierung konnte nicht gespeichert werden",
