--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -57,6 +57,7 @@
   "room.request-access.ok": "You have been successfully granted access to the ONLYOFFICE DocSpace room",
   "room.request-access.error": "Error getting access to the ONLYOFFICE DocSpace room",
   "settings.authorization.deleting.ok": "ONLYOFFICE DocSpace authorization has been successfully deleted",
+  "settings.authorization.deleting.confirm-message": "Are you sure you want to log out?",
   "settings.authorization.unsuccessful": "Invalid authorization credentials. Please check your Email and password and try to log in again.",
   "settings.authorization.saving.ok": "ONLYOFFICE DocSpace authorization has been successfully saved",
   "settings.authorization.saving.error": "Could not save ONLYOFFICE DocSpace authorization",
