--- a/frontend/src/assets/locales/it-IT/translation.json
+++ b/frontend/src/assets/locales/it-IT/translation.json
@@ -58,6 +58,7 @@
   "room.request-access.error": "Errore nell'accesso alla stanza ONLYOFFICE DocSpace",
   "settings.authorization.deleting.ok": "L'autorizzazione di ONLYOFFICE DocSpace è stata eliminata con successo",
   "settings.authorization.saving.ok": "L'autorizzazione di ONLYOFFICE DocSpace è stata salvata con successo",
+  "settings.authorization.deleting.confirm-message": "",
   "settings.authorization.unsuccessful": "",
   "settings.authorization.saving.error": "Impossibile salvare l'autorizzazione di ONLYOFFICE DocSpace",
   "settings.authorization.title": "",
