--- a/frontend/src/assets/locales/es-ES/translation.json
+++ b/frontend/src/assets/locales/es-ES/translation.json
@@ -32,6 +32,7 @@
   "button.forgot-password": "",
   "button.finish": "",
   "button.next": "",
+  "button.open-in-docspace": "",
   "button.save": "Guardar",
   "button.skip": "",
   "button.request-access": "Solicitar acceso",
