--- a/frontend/src/assets/locales/pt-BR/translation.json
+++ b/frontend/src/assets/locales/pt-BR/translation.json
@@ -32,6 +32,7 @@
   "button.forgot-password": "",
   "button.save": "Salvar",
   "button.finish": "",
+  "button.open-in-docspace": "",
   "button.next": "",
   "button.request-access": "Solicitar acesso",
   "button.skip": "",
