--- a/frontend/src/assets/locales/de-DE/translation.json
+++ b/frontend/src/assets/locales/de-DE/translation.json
@@ -32,6 +32,7 @@
   "button.forgot-password": "",
   "button.finish": "",
   "button.next": "",
+  "button.open-in-docspace": "",
   "button.save": "Speichern",
   "button.skip": "",
   "button.reinstall": "App neu installieren",
