--- a/frontend/src/assets/locales/en/translation.json
+++ b/frontend/src/assets/locales/en/translation.json
@@ -32,6 +32,7 @@
   "button.forgot-password": "Forgot password?",
   "button.finish": "Finish",
   "button.next": "Next",
+  "button.open-in-docspace": "Open in DocSpace",
   "button.save": "Save",
   "button.skip": "Skip",
   "button.request-access": "Request access",
