--- a/frontend/src/assets/locales/fr-FR/translation.json
+++ b/frontend/src/assets/locales/fr-FR/translation.json
@@ -32,6 +32,7 @@
   "button.forgot-password": "",
   "button.finish": "",
   "button.next": "",
+  "button.open-in-docspace": "",
   "button.save": "Enregistrer",
   "button.skip": "",
   "button.request-access": "Demander l'accès",
