--- a/frontend/src/assets/locales/it-IT/translation.json
+++ b/frontend/src/assets/locales/it-IT/translation.json
@@ -32,6 +32,7 @@
   "button.forgot-password": "",
   "button.finish": "",
   "button.next": "",
+  "button.open-in-docspace": "",
   "button.save": "Salva",
   "button.skip": "",
   "button.request-access": "Richiedi l'accesso",
