--- a/frontend/src/assets/locales/ru-RU/translation.json
+++ b/frontend/src/assets/locales/ru-RU/translation.json
@@ -32,6 +32,7 @@
   "button.forgot-password": "",
   "button.finish": "",
   "button.next": "",
+  "button.open-in-docspace": "",
   "button.save": "Сохранить",
   "button.request-access": "Запросить доступ",
   "button.skip": "",
